Mon Aug 24 16:35:57 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* st.c (st_delete_safe): deals with packed entries.
	  [ruby-core:25080]

	* st.c (st_cleanup_safe): ditto.  [ruby-core:25081]

Mon Aug 24 13:24:07 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (MAKEDIRS): define.

	* common.mk (capi): using $(MAKEDIRS), so depends on $(PREP).

Mon Aug 24 13:14:06 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_CHECK_SIZEOF): set cross_compiling only when
	  universal binary.

Mon Aug 24 12:55:19 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/Makefile.sub (enc/unicode/name2ctype.h): use md instead of
	  $(MAKEDIRS).

Sun Aug 23 15:22:45 2009  Tanaka Akira  <akr@fsij.org>

	* bootstraptest/runner.rb (main): "usage" description updated.

Sun Aug 23 15:12:22 2009  Tanaka Akira  <akr@fsij.org>

	* bootstraptest/runner.rb (Dir.mktmpdir): updated to latest.
	  (in_temporary_working_directory): temporary directory name changed.
	  
Sun Aug 23 00:56:13 2009  Tanaka Akira  <akr@fsij.org>

	* thread.c (rb_thread_schedule): don't recur infinitely.
	  (rb_threadptr_execute_interrupts): ditto.
	  [ruby-dev:38060]

Sat Aug 22 15:07:23 2009  Tanaka Akira  <akr@fsij.org>

	* ext/syck/rubyext.c (id_hash_new): new function to create a hash
	  which key is compared by object id.
	  (syck_emitter_reset): use id_hash_new for bonus->data.

	* lib/yaml.rb (YAML.quick_emit): give the object itself to emitter.
	  don't use object_id and hash.

Sat Aug 22 13:05:22 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* Makefile.in: use CP and MV macros.

Sat Aug 22 01:29:29 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (rm_f, rm_rf): pass the last hash through if exists.
	  [ruby-dev:39153]

Sat Aug 22 00:48:08 2009  Tanaka Akira  <akr@fsij.org>

	* enumerator.c (ary2sv): add dup argument.
	  (enumerator_next): call ary2sv with dup=0.
	  (enumerator_peek): call ary2sv with dup=1 to return duplicated array.