@@ -1,3 +1,8 @@
+Mon Aug 24 18:58:56 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* include/ruby/missing.h (vsnprintf): rollback a part of r24179, because
+	  it's meaningless.
+
 Mon Aug 24 16:35:57 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* st.c (st_delete_safe): deals with packed entries.
